[package]
name = "rust_matrix"
version = "0.1.0"
edition = "2021"


[profile.min_size]
inherits = "release"
codegen-units = 1
strip = true         # Automatically strip symbols from the binary.
opt-level = "z"      # Optimize for size.
lto = true
panic = "abort"

[dependencies]
colorsys = "0.7.1"
crossterm = { version = "0.29.0", default-features = false, features = [
  "events",
] }
rand = { version = "0.9.2", features = [
  "small_rng",
  "thread_rng",
], default-features = false }
signal-hook = { version = "0.3.18", default-features = false }
